--- a/interface.css
+++ b/interface.css
@@ -2,6 +2,7 @@ ul.nav {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  background-color: #333;
 }
 ul.nav>li {
   float: left;
@@ -9,6 +10,8 @@ ul.nav>li {
 ul.nav>li a {
   display: block;
   padding: 8px;
+  color: white;
+  text-align: center;
   background-color: #dddddd;
 }
 ul.nav>li a:hover {
