--- a/interface.css
+++ b/interface.css
@@ -10,6 +10,7 @@ ul.nav>li a {
   display: block;
   padding: 8px;
   text-align: center;
+  color: white;
   background-color: #555555;
 }
 ul.nav>li a:hover {
