--- a/interface.css
+++ b/interface.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Mindusfont';
+  src: url('notmyfontistolethisfromanukesgithub.ttf');
+}
 ul.nav {
   list-style-type: none;
   margin: 0;
@@ -15,4 +19,7 @@ ul.nav>li a {
 }
 ul.nav>li a:hover {
   background-color: #111;
+}
+* {
+  font-family: 'Mindusfont';
 }
