--- a/interface.css
+++ b/interface.css
@@ -4,6 +4,7 @@
 }
 * {
   font-family: 'Mindusfont';
+  color: white;
   background-color: #555555
 }
 ul.nav {
@@ -14,8 +15,10 @@ ul.nav {
 }
 ul.nav>li {
   float: left;
-  border-left: 1px solid #bbb;
-  border-right: 1px solid #bbb;
+  border-left: 1px solid #777;
+  border-right: 1px solid #777;
+  border-up: 1px solid #777;
+  border-down: 1px solid #777;
 }
 ul.nav>li a {
   display: block;
