--- a/interface.css
+++ b/interface.css
@@ -5,7 +5,7 @@
 * {
   font-family: 'Mindusfont';
   color: white;
-  background-color: #555555
+  background-color: #444
 }
 ul.nav {
   list-style-type: none;
@@ -15,17 +15,14 @@ ul.nav {
 }
 ul.nav>li {
   float: left;
-  border-left: 1px solid #777;
-  border-right: 1px solid #777;
-  border-up: 1px solid #777;
-  border-down: 1px solid #777;
+  border-right: 1px solid #444
 }
 ul.nav>li a {
   display: block;
   padding: 8px;
   text-align: center;
   color: white;
-  background-color: #555555;
+  background-color: #555;
   text-decoration: none;
 }
 ul.nav>li a:hover {
