--- a/interface.css
+++ b/interface.css
@@ -40,7 +40,7 @@ ul.drnav>li {
 }
 ul.drnav>li a {
   display: block;
-  padding: 8px
+  padding-top: 8px;
   text-align: center;
   color: white;
   background-color: #555;
