massive overhaul on how data is stored

--- a/styles/interface.css
+++ b/styles/interface.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Mindusfont';
-  src: url('notmyfontistolethisfromanukesgithub.ttf');
+  src: url('mindusfont.ttf');
 }
 * {
   font-family: 'Mindusfont';
