--- a/styles/interface.css
+++ b/styles/interface.css
@@ -68,11 +68,14 @@ div.autosavebar>p {
   color: #3c763d;
   background-color: #5cb85c;
 }
+.version {
+  position: relative;
+}
 .version1 {
   color: #555;
   z-index: 99;
-  bottom: 22;
-  left: 0;
+  bottom: 24;
+  right: 0;
   margin: 0;
   padding: 0;
   position: fixed;
@@ -82,7 +85,7 @@ div.autosavebar>p {
   z-index: 98;
   color: #555;
   bottom: 12;
-  left: 0;
+  right: 0;
   margin: 0;
   padding: 0;
   position: fixed;
@@ -92,7 +95,7 @@ div.autosavebar>p {
   z-index: 97;
   color: #555;
   bottom: 0;
-  left: 0;
+  right: 0;
   margin: 0;
   padding: 0;
   position: fixed;
